# ros_amr_interop

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  package.xml  sample_config.yaml  setup.cfg  setup.py  workspace.code-workspace
.ci/docker/: Dockerfile  start_local_dev.sh
.github/workflows/: code-quality.yaml  lint.yaml
massrobotics_amr_sender/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
massrobotics_amr_sender/launch/: massrobotics_amr_sender.launch
massrobotics_amr_sender/params/: sample_config.yaml
massrobotics_amr_sender/sample/: README.md  config.yaml  massrobotics_amr_sender_rosbag_launch.launch
massrobotics_amr_sender/sample/rosbag/: rosbag_demo.bag
massrobotics_amr_sender/sample/rosbag/map/: README.md  map.pgm
massrobotics_amr_sender/sample/synthetic/: node.py
massrobotics_amr_sender/scripts/: massrobotics_amr_sender_node.py
massrobotics_amr_sender/src/massrobotics_amr_sender/: __init__.py  config.py
massrobotics_amr_sender/src/massrobotics_amr_sender/messages/: __init__.py
massrobotics_amr_sender_py/: CHANGELOG.rst  README.md  package.xml  sample_config.yaml  setup.cfg  setup.py
massrobotics_amr_sender_py/launch/: massrobotics_amr_sender.launch.py  massrobotics_amr_sender_launch.py
massrobotics_amr_sender_py/massrobotics_amr_sender/: __init__.py  config.py  massrobotics_amr_node.py
massrobotics_amr_sender_py/massrobotics_amr_sender/messages/: __init__.py  schema.json
massrobotics_amr_sender_py/params/: sample_config.yaml
massrobotics_amr_sender_py/sample/: README.md  config.yaml  massrobotics_amr_sender_rosbag_launch.py
massrobotics_amr_sender_py/sample/rosbag/: metadata.yaml
massrobotics_amr_sender_py/sample/rosbag/map/: map.yaml
massrobotics_amr_sender_py/sample/synthetic/: node.py
massrobotics_amr_sender_py/test/: conftest.py  test_mass_interop.py  test_mass_interop_config.py
mrai_sender_py/: CHANGELOG.rst  README.md  package.xml  sample_config.yaml  setup.cfg  setup.py
mrai_sender_py/mrai_sender/messages/: __init__.py
mrai_sender_py/test/: test_mass_interop.py  test_mass_interop_config.py
rmf_inorbit_fleet_adapter/: LICENSE  README.md  package.xml  setup.cfg  setup.py
rmf_inorbit_fleet_adapter/launch/: rmf_inorbit_fleet_adapter.launch.xml
rmf_inorbit_fleet_adapter/rmf_inorbit_fleet_adapter/: Requester.py  RobotClientAPI.py  RobotCommandHandle.py  fleet_adapter.py  utils.py
ros2_to_mass_amr_interop/: __init__.py  config.py  main.py  ros2_to_mass_node.py
ros2_to_mass_amr_interop/messages/: AMR_Interop_Standard.json  __init__.py  schema.json
ros2mass/: __init__.py  config.py  main.py  ros2mass.py
test/: README.md  test_copyright.py  test_mass_interop.py  test_mass_interop_config.py
test/scripts/: demo_emulation.sh
test/test_data/: config.yaml
vda5050_connector/: .clang-format  .flake8  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  pytest.ini
vda5050_connector/action/: NavigateThroughNodes.action  NavigateToNode.action  ProcessVDAAction.action
vda5050_connector/config/: connector_example.yaml
vda5050_connector/docs/source/: api.rst  conf.py  index.rst
vda5050_connector/docs/source/api/: mqtt_bridge.rst  vda5050_controller.rst
vda5050_connector/include/vda5050_connector/: adapter.hpp  handler.hpp  nav_to_node.hpp  state_handler.hpp  utils.hpp  vda_action.hpp  visibility_control.h
vda5050_connector/launch/: controller.launch.py  mqtt_bridge.launch.py
vda5050_connector/scripts/: mqtt_bridge.py  vda5050_controller.py
vda5050_connector/src/: adapter.cpp  utils.cpp
vda5050_connector/srv/: GetState.srv  SupportedActions.srv
vda5050_connector/test/: conftest.py  test_utils.py  test_vda5050_controller.py  test_vda5050_controller_actions.py  test_vda5050_mqtt_bridge.py
vda5050_connector/test/adapter/: CMakeLists.txt  plugins_test.xml
vda5050_connector/test/adapter/common/: adapter_test.hpp  stub_nav_to_node.cpp  stub_state_handlers.cpp  stub_vda_actions.cpp
vda5050_connector/test/adapter/handler_execution/: handler_execution_test.cpp
vda5050_connector/test/adapter/node_config/: node_config_test.cpp
vda5050_connector/test/adapter/plugin_load/: plugin_load_test.cpp
vda5050_connector/vda5050_connector/: mqtt_bridge.py  rewritten_yaml.py  vda5050_controller.py
vda5050_connector/vda5050_connector_py/: mqtt_bridge.py  utils.py  vda5050_controller.py
vda5050_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
vda5050_msgs/msg/: AGVAction.msg  AGVGeometry.msg  AGVPosition.msg  Action.msg  ActionParameterDefinition.msg  BatteryState.msg  BoundingBoxReference.msg  Connection.msg  ControlPoint.msg  CurrentAction.msg  Edge.msg  EdgeState.msg  Envelope2D.msg  Envelope3D.msg  Error.msg  ErrorReference.msg  Factsheet.msg  Header.msg  Info.msg  InfoReference.msg  InstantActions.msg  Load.msg  LoadDimensions.msg  LoadSet.msg  LoadSpecification.msg  MaxArrayLens.msg  MaxStringLens.msg  Node.msg  NodePosition.msg  NodeState.msg  OptionalParameter.msg  Order.msg  OrderState.msg  PhysicalParameters.msg  PolygonPoint.msg  Position.msg  ProtocolFeatures.msg  ProtocolLimits.msg  SafetyState.msg  Timing.msg  (+5 more)
vda5050_serializer/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
vda5050_serializer/test/: test_dict_converters.py  test_string_converters.py
vda5050_serializer/vda5050_serializer/: __init__.py
