<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_connector</name>
  <version>1.1.1</version>
  <description>ROS2 to VDA5050 / VDA5050 to ROS2 connector</description>
  <maintainer email="leandro@inorbit.ai">Leandro Pineda</maintainer>
  <author email="alejandro.duarte@ekumenlabs.com">John Alejandro Duarte Carrasco</author>
  <author email="leandro@inorbit.ai">Leandro Pineda</author>
  <license file="LICENSE">BSD Clause 3</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>tf2</depend>

  <depend>python3-paho-mqtt</depend>
  <depend>rosidl_runtime_py</depend>

  <depend>geometry_msgs</depend>
  <depend>vda5050_msgs</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
