<?xml version="1.0"?>
<package format="3">
  <name>vda5050_msgs</name>
  <version>0.0.0</version>
  <description>
    The vda5050_msgs package contains the datatypes (json objects) specified by the VDA
    "Arbeitskreis Schlüsseltechnologien" in their recommondation "VDA 5050 - Schnittstelle zur Kommunikation zwischen
    Fahrerlosen Transportfahrzeugen (FTF) und einer Leitsteuerung.
    This package provides the message files which can be used to be (de-)serialized with an implementation of mqtt
    (e.g mqtt_bridge) or to plain json (rospy_message_converter) or similar.
  </description>

  <maintainer email="jba@ipa.fhg.de">Jannik Abbenseth</maintainer>


  <license>BSD</license>


  <url type="website">https://www.vda.de/dam/vda/publications/2019/Logistik/VDA5050.pdf</url> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
